Update to styles to fix clock jump on hover

--- a/sass/akvo_style.scss
+++ b/sass/akvo_style.scss
@@ -1810,7 +1810,7 @@ progress {
 
 .jcgmt-digital, .jcgmt-date, .hellotext {
   font-weight: 300 !important;
-  line-height: 30px;
+  line-height: 40px;
   color: #000;
   font-family: "Assistant", sans-serif !important;
   font-size: 14px;
